# external-procmacro-repro

./: .gitignore  Cargo.toml  README.md  trigger-repro.sh
crate_1/: Cargo.toml
crate_1/src/: api.udl  lib.rs
crate_2/: Cargo.toml
crate_2/src/: api.udl  lib.rs
lib/: Cargo.toml
lib/src/: lib.rs
uniffi-bindgen/: Cargo.toml  README.md  uniffi-bindgen.rs
